# Ultimate-ssrf-Framework

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  ssrf_arsenal.py
.github/workflows/: python-ci.yml  ssrf-framework.yml
docs/: architecture.md  callbacks.md  examples.md
examples/: ai_scan.sh  basic_scan.sh  export_scan.sh  proxy_scan.sh
tests/: test_cli.py  test_core.py  test_targets.py  test_waf.py
ultimate_ssrf/: __init__.py  ai.py  callbacks.py  cli.py  core.py  models.py  payloads.py  proxy.py  targets.py  utils.py  waf.py
ultimate_ssrf/modules/: grpc.py  k8s.py  serverless.py  websocket.py
ultimate_ssrf/reporting/: graph.py  html.py  nuclei.py  siem.py
