[project]
name = "ultimate-ssrf"
version = "4.2.0"
description = "Advanced SSRF Discovery, Validation & Analysis Framework"
authors = [
    { name = "belladonnask" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "aiohttp_socks>=0.10.1",
    "networkx>=3.0",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
ssrf-arsenal = "ultimate_ssrf.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
